# proscore

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/spec/: 01-architecture.md  02-binning.md  03-selection.md  04-inspect.md  05-monitor.md  06-rules.md  07-ai.md  08-report.md
docs/使用指南/: binning.md  data.md  diagnose.md  evaluate.md  index.md  inspect.md  modeling.md  pipeline-config.md  pipeline-spec.md  real-data-test-plan.md  report.md  rules.md  selection.md  transform.md  viz.md
examples/: README.md  pipeline_template.xlsx
notebooks/: ProScore完整建模流程.ipynb  ProScore真实数据全流程测试.ipynb
scripts/: download_real_data.py  prepare_real_scorecard_data.py  verify_package.sh
src/proscore/: __init__.py  __main__.py  _pipeline_config.py  _spec.py
src/proscore/_data/: __init__.py
src/proscore/binning/: __init__.py  _adjust.py  _base.py  _binning.py  _categorical.py  _chi.py  _distance.py  _frequency.py  _tree.py  _woe.py
src/proscore/evaluate/: __init__.py  _diagnose.py  _metrics.py
src/proscore/inspect/: __init__.py  _correlation.py  _detect.py  _quality.py  _stability.py
src/proscore/modeling/: __init__.py  _scorecard.py
src/proscore/monitor/: __init__.py  _monitor.py
src/proscore/report/: __init__.py  _builder.py
src/proscore/rules/: __init__.py  _miner.py
src/proscore/selection/: __init__.py  _filter.py  _screen.py  _stepwise.py
tests/: conftest.py  demo_scorecard_data.csv  generate_presets.py  generate_test_data.py  synthetic_credit.py  test_binning.py  test_data.csv  test_diagnose.py  test_docs_examples.py  test_evaluate.py  test_evaluate_period.py  test_filter.py  test_inspect.py  test_pipeline.py  test_pipeline_rules.py  test_presets.py  test_report.py  test_rules.py  test_scorecard.py  test_screen.py  test_spec.py  test_stepwise.py  test_transform.py  test_woe.py  variable_presets.xlsx
(+9 files in other folders)
