[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proscore"
version = "0.1.1"
description = "Production-grade scorecard development toolkit"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Liqiwei"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = [
    "scorecard",
    "credit-risk",
    "woe",
    "binning",
    "credit-scoring",
    "risk-modeling",
    "financial",
    "banking",
    "logistic-regression",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "statsmodels>=0.13",
]

[project.urls]
Homepage = "https://github.com/lqwzlh/proscore"
Repository = "https://github.com/lqwzlh/proscore"
Issues = "https://github.com/lqwzlh/proscore/issues"

[project.scripts]
proscore = "proscore.__main__:main"

[project.optional-dependencies]
inspect-ml = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
]
excel = [
    "openpyxl>=3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
